--- a/travel-website/login.html
+++ b/travel-website/login.html
@@ -23,12 +23,12 @@
                         <form id="_j_login_form" method="post" >
                             <div class="form-field">
                                 <input name="username" type="text" placeholder="您的手机号" autocomplete="off"
-                                       data-verification-name="帐号"  value="13700000000">
+                                       data-verification-name="帐号"  value="19836397122">
                                 <div class="err-tip"></div>
                             </div>
                             <div class="form-field">
                                 <input name="password" type="password" placeholder="您的密码" autocomplete="off" data-verification-name="密码"
-                                       class="verification[required,minSize[4],maxSize[50]]" value="1111">
+                                       class="verification[required,minSize[4],maxSize[50]]" value="123456">
                                 <div class="err-tip"></div>
                             </div>
                             <div class="form-link"><a href="javascript:;">忘记密码</a></div>
@@ -47,7 +47,7 @@
                         </div>                        </div>
                     <div class="inner_v2_right">
                         <img src="/images/qrcode.jpg">
-                        <p>扫一扫<br>下载狼行天下APP</p>
+                        <p>扫一扫<br>下载旅游网APP</p>
                     </div>
                 </div>
                 <div class="bottom-link">
